force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/leaseworks__Utilization_Report_List_Item__c.object-meta.xml
<CustomObject>
    <label>Supplemental Rent Utilization</label>
    <nameField>
        <displayFormat>URA-{0000}</displayFormat>
        <label>Assembly Utilization Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplemental Rent Utilization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>