force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Actual_Location__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_Location__c</fullName>
    <label>Actual Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>