force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Assembly_Derate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_Derate__c</fullName>
    <formula>leaseworks__Constituent_Assembly__r.leaseworks__Derate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assembly Derate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>