force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Assembly_MR_Info__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_MR_Info__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Supplemental Rent Utilization</relationshipLabel>
    <relationshipName>Assembly_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>