force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Assembly_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_Utilization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assembly Utilization</label>
    <referenceTo>leaseworks__Assembly_Utilization__c</referenceTo>
    <relationshipLabel>Supplemental Rent Utilization</relationshipLabel>
    <relationshipName>Supplemental_Rent_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>