force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Assumed_Estimated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Estimated__c</fullName>
    <formula>leaseworks__Utilization_Report__r.leaseworks__Assumed_Estimated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Assumed/Estimated?</label>
    <type>Checkbox</type>
</CustomField>