force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Assumed_FH_FC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_FH_FC_Ratio__c</fullName>
    <description>This field will be populated as per the Ratio Current value on Supplemental record at the time of Utilization creation.</description>
    <inlineHelpText>This field will be populated as per the Ratio Current value on Supplemental record at the time of Utilization creation.</inlineHelpText>
    <label>Assumed FH:FC Ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>