force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Base_MRR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_MRR__c</fullName>
    <description>This field displays the effective rate based on the Rate Method selected in the associated SRUR (Supplemental Rate Utilization Rate) records. The behavior depends on the chosen Rate Method: N/A: The effective rate is populated from a single SRUR record, as only one is allowed. Max: If multiple SRUR records exist, the effective rate is derived from the SRUR record with the highest MR (Maintenance Reserve) total value. Sum: If one or more SRUR records exist, the effective rate is calculated as the sum of all effective rates across the SRUR records.</description>
    <label>Effective Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>