force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Constituent_Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Constituent_Assembly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Assembly</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Constituent_Assembly__c.leaseworks__Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Report_Item__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Supplemental Rent Utilization</relationshipLabel>
    <relationshipName>UR_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>