force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__CSI__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSI__c</fullName>
    <description>Cycles Since Installed</description>
    <inlineHelpText>Cycles Since Installed</inlineHelpText>
    <label>_CSI(AsPerAirlineRecs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>