force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__CSLV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSLV__c</fullName>
    <formula>/*Constituent_Assembly__r.CSLV__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2505 _CSLV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>