force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__CSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN__c</fullName>
    <formula>leaseworks__Constituent_Assembly__r.leaseworks__CSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_CSN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>