force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__CSN_At_Month_Start_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN_At_Month_Start_F__c</fullName>
    <description>Snapshot of CSN at the start of the month, before current CSN is added to the value</description>
    <formula>leaseworks__CSN_At_Month_Start__c</formula>
    <inlineHelpText>Snapshot of CSN at the start of the month, before current CSN is added to the value</inlineHelpText>
    <label>CSN At Month Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>