force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Effective_Derate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Derate__c</fullName>
    <description>This is the rate that the Assembly MR is adjusted for based on the FH:FC and Derate (please see Ratio Table)</description>
    <formula>leaseworks__Y_Hidden_Derate__c</formula>
    <inlineHelpText>This is the rate that the Assembly MR is adjusted for based on the FH:FC and Derate (please see Ratio Table)</inlineHelpText>
    <label>Effective Derate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>