force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Effective_Difference__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Difference__c</fullName>
    <description>Effective Difference is the difference between the MR calculated for TrueUp Utilization and MR Calculated from Actual utilization or previous Trueup Utilization, for a supplemental rent. This field reflects the amount that the invoice/ credit memo would be created for, from Trueup Utilization. Please note, this field may not reflect the right value if the previous Invoice/ Credit Memo is in Pending or Declined status.</description>
    <inlineHelpText>Effective Difference is the difference between the MR calculated for TrueUp Utilization and MR Calculated from Actual utilization or previous Trueup Utilization, for a supplemental rent. This field reflects the amount that the invoice/ credit memo would be created for, from Trueup Utilization. Please note, this field may not reflect the right value if the previous Invoice/ Credit Memo is in Pending or Declined status.</inlineHelpText>
    <label>Effective Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>