force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Effective_Escalation_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Escalation_Factor__c</fullName>
    <description>As of now only for internal purpose, we will remove it on later phase.</description>
    <inlineHelpText>Escalation factor based on the Effective Escalation Percentage.</inlineHelpText>
    <label>_Effective Escalation Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>