force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Effective_Rate_Final__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Rate_Final__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <formula>BLANKVALUE( leaseworks__Y_Hidden_Effective_Rate_Calculated__c, ROUND( (leaseworks__Y_Hidden_MR_Actual_Before_Rounding__c/  ( leaseworks__Net_Units__c +  leaseworks__Threshold_Units__c )) , leaseworks__Y_Hidden_MR_RoundingFactor__c))</formula>
    <label>[OLD MR]Effective Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>