force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Effective_Unit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Unit__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <label>[OLD MR]_Effective Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Cycles</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>APU H</fullName>
            </value>
            <value>
                <fullName>APU C</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>