force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Effective_Unit_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Unit_F__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <formula>null</formula>
    <label>[OLD MR]Effective Unit</label>
    <type>Text</type>
</CustomField>