force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Escalated_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Escalated_Threshold_Amount__c</fullName>
    <description>As of now only for internal purpose, we will remove it on later phase.</description>
    <formula>leaseworks__Threshold_Amount__c *  leaseworks__Effective_Escalation_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_unused_2106 Escalated Threshold Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>