force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Expense_Amount__c</fullName>
    <description>This is as per checkbox set in Assemly MR rate info page.</description>
    <label>Z_Unused 2106 Expense Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>