force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__FH_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_F__c</fullName>
    <formula>leaseworks__Running_Hours_During_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>