force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__FH_FC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_FC_Ratio__c</fullName>
    <formula>IF(leaseworks__Cycles_During_Month__c &gt;0, leaseworks__Running_Hours_During_Month__c / leaseworks__Cycles_During_Month__c , null)</formula>
    <label>Calculated FH:FC Ratio</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>