force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__FHFC_Range__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FHFC_Range__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <formula>TEXT(leaseworks__Y_Hidden_FHFC_Lower_Limit__c) + &#39; - &#39; + TEXT(leaseworks__Y_Hidden_FHFC_Upper_Limit__c)</formula>
    <label>[OLD MR]FH:FC Range</label>
    <type>Text</type>
</CustomField>