force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__HP_System_Allocation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__HP_System_Allocation__c</fullName>
    <label>Z_Unused_2106 HP System Allocation</label>
    <summarizedField>leaseworks__Utilization_Report_LLP__c.leaseworks__Maintenance_Reserve__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Utilization_Report_LLP__c.leaseworks__Y_Hidden_Module_For_Rollup__c</field>
        <operation>equals</operation>
        <value>HP System</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Utilization_Report_LLP__c.leaseworks__Utilization_Report_List_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>