force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Intermediate_Case_Allocation_Pct__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Intermediate_Case_Allocation_Pct__c</fullName>
    <formula>leaseworks__Intermediate_Case_Allocation__c /leaseworks__LLP_MR_Per_LLP_Case__c</formula>
    <label>Z_Unused_2106 Intermediate Case Alloctn%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>