force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Interpolation_Rate_Choice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interpolation_Rate_Choice__c</fullName>
    <description>Source : Fortress (Sebastian)
Asana: Fortress Internal Dev -&gt; Link To Interpolation</description>
    <formula>&#39;deprecated&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FH:FC Interpolation Choice</label>
    <type>Text</type>
</CustomField>