force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__IP_Compressor_Allocation_Pct__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IP_Compressor_Allocation_Pct__c</fullName>
    <formula>leaseworks__IP_Compressor_Allocation_R__c /leaseworks__LLP_MR_Per_LLP_Case__c</formula>
    <label>Z_Unused_2106 IP Compressor Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>