force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Is_SubFund_SRU__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_SubFund_SRU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates it is subFund or not</description>
    <label>_Is SubFund SRU</label>
    <type>Checkbox</type>
</CustomField>