force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve__c</fullName>
    <formula>leaseworks__Y_Hidden_MR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused Maintenance Reserve (Assembly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>