force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Maintenance_Reserve_F_CAP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_F_CAP__c</fullName>
    <description>The maximum limit of the fund to be accumulated for this utilization period. The Total MR amount will be adjusted based on the CAP amount.</description>
    <formula>leaseworks__Maintenance_Reserve_CAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The maximum limit of the fund to be accumulated for this utilization period. The Total MR amount will be adjusted based on the CAP amount.</inlineHelpText>
    <label>Maintenance Reserve CAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>