force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Monthly_Threshold_Guaranteed__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Monthly_Threshold_Guaranteed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is minimum monthly threshold guaranteed?</description>
    <label>Monthly Threshold Guaranteed?</label>
    <type>Checkbox</type>
</CustomField>