force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__MR_Above_Threshold__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Above_Threshold__c</fullName>
    <description>As of now only for internal purpose, we will remove it on later phase.</description>
    <formula>(leaseworks__Rate_Beyond_Threshold__c *  if( text(leaseworks__Effective_Unit__c) == &#39;Monthly&#39;,1,    leaseworks__Net_Units__c  )    )* leaseworks__Effective_Escalation_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_unused_2106 MR Above Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>