force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__MR_Rate_Esc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Rate_Esc__c</fullName>
    <description>Effective Rate after interpolation/base rate and escalation. In case utilization is below threshold and this rate was not used, field is null.</description>
    <label>MR Rate (Esc)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>