force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Net_Units__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Units__c</fullName>
    <description>Net units chargeable at normal rates.</description>
    <label>_Net Units</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>