force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Net_Units_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Units_F__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <formula>leaseworks__Net_Units__c</formula>
    <label>[OLD MR]Net Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>