force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Original_Position__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Original_Position__c</fullName>
    <description>Original position of the engine at delivery time</description>
    <inlineHelpText>Original position of the engine at delivery time</inlineHelpText>
    <label>Original Position At Delivery (Engine)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>