force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Overridden_FH_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Overridden_FH_FC__c</fullName>
    <label>_Overridden FH:FC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>