force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Overridden_FH_FC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Overridden_FH_FC_Ratio__c</fullName>
    <formula>leaseworks__Overridden_FH_FC__c</formula>
    <label>Overridden FH:FC Ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>