force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Override_Derate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Override_Derate__c</fullName>
    <description>Use this field when the Derate % applicable for MR calculation differs from the Assembly Derate. If updated, the Effective Derate will be recalculated and applied to the MR calculation.</description>
    <inlineHelpText>Use this field when the Derate % applicable for MR calculation differs from the Assembly Derate. If updated, the Effective Derate will be recalculated and applied to the MR calculation.</inlineHelpText>
    <label>Override Derate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>