force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Parent_SRU__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Parent_SRU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a Parent SRU to its Sub-fund SRUs.</description>
    <inlineHelpText>Shows the Parent SRU that this Sub-fund utilization belongs to.</inlineHelpText>
    <label>Parent SRU</label>
    <referenceTo>leaseworks__Utilization_Report_List_Item__c</referenceTo>
    <relationshipLabel>Child Supplemental Rent Utilization</relationshipLabel>
    <relationshipName>Supplemental_Rent_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>