force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Partial_Month_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Partial_Month_F__c</fullName>
    <description>Indicates whether the utilization is for a partial month</description>
    <formula>IF(AND(
        leaseworks__Partial_Period_To__c == leaseworks__For_The_Month_Ending__c,
        leaseworks__Partial_Period_From__c == Date(YEAR(leaseworks__For_The_Month_Ending__c),MONTH(leaseworks__For_The_Month_Ending__c),1)
        ),
  false,
  true)</formula>
    <inlineHelpText>Indicates whether the utilization is for a partial month</inlineHelpText>
    <label>Partial Month</label>
    <type>Checkbox</type>
</CustomField>