force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Prorated_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prorated_FH__c</fullName>
    <label>Prorated FH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>