force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Provision_MR_Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Provision_MR_Assembly__c</fullName>
    <label>Provision MR (Assembly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>