force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Rate Schedule record that is using to calculate MR</description>
    <inlineHelpText>Source Rate Schedule record that is using to calculate MR</inlineHelpText>
    <label>Rate Schedule</label>
    <referenceTo>leaseworks__MR_Rate__c</referenceTo>
    <relationshipLabel>Supplemental Rent Utilization</relationshipLabel>
    <relationshipName>Supplemental_Rent_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>