force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Rate_Up_To_Threshold__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Up_To_Threshold__c</fullName>
    <description>Rate that the system used for the utilization below threshold. Utilization above threshold is charged by MR Rate (Esc)</description>
    <inlineHelpText>Rate that the system used for the utilization below threshold. Utilization above threshold is charged by MR Rate (Esc)</inlineHelpText>
    <label>_Rate Up To Threshold</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>