force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ratio_Table__c</fullName>
    <description>As part of the MR 2.0 changes, this field will be deprecated shortly. However, due to its impact on forecasting, we will retain the field for now.</description>
    <formula>HYPERLINK(&#39;/&#39; &amp;  leaseworks__Assembly_MR_Info__r.leaseworks__Ratio_Table__c  , leaseworks__Assembly_MR_Info__r.leaseworks__Ratio_Table__r.Name)</formula>
    <label>[OLD MR]Current Ratio Table</label>
    <type>Text</type>
</CustomField>