force-app/main/default/objects/leaseworks__Utilization_Report_List_Item__c/fields/leaseworks__Start_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Start_Date_F__c</fullName>
    <description>Start Date of the Utilization</description>
    <formula>leaseworks__Utilization_Report__r.leaseworks__Start_Date_F__c</formula>
    <inlineHelpText>Start Date of the Utilization</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>